Updated vercel.json to remove Builds array, updated the Server.js for the gallery and tweaked vite.config to show correct output dir

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-website-monorepo",
+  "name": "APW-monorepo",
   "version": "1.0.0",
   "private": true,
   "description": "Pressure Washing website monorepo with React frontend and Node.js backend",
