--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "fs": "^0.0.1-security"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
