--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/*.js": {
-      "runtime": "nodejs@22.x"
+      "runtime": "nodejs@22.18.0"
     }
   },
   "rewrites": [
