--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,18 @@
 {
   "version": 2,
+  "functions": {
+    "api/index.js": {
+      "runtime": "node@22.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/",
       "destination": "/api/index"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ]
 }
