updated backend vercel

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/",
       "destination": "/api/index"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     }
   ]
 }
